tests/bad/arrays/1.lat
int main () {
    int[] a = new int[10];
    a.length = 5;
    return 0;
}